<resources>
    <string name="app_name">FlappyBird</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start">START</string>
    <string name="leader_board">LEADERBOARD</string>
    <string name="nameInput">Your Name</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">CANCEL</string>
    <string name="clear">CLEAR SCORES</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>