<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_home"
    >

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:textColor="@color/bush_green"
        android:backgroundTint="@color/white"
        android:text="@string/start"
        android:id="@+id/startButton"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/startButton"
        android:layout_marginTop="10sp"
        android:textColor="@color/bush_green"
        android:backgroundTint="@color/white"
        android:text="@string/leader_board"
        android:id="@+id/leaderButton"
        />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/leaderButton"
        android:text="@string/clear"
        android:textColor="@color/bush_green"
        android:backgroundTint="@color/white"
        android:id="@+id/clearButton"
        />

</RelativeLayout>